--- a/AbiaState.html
+++ b/AbiaState.html
@@ -14,11 +14,11 @@
         <header class="relative p-6 px-0">
             <div class="flex items-center justify-between">
                 <div>
-                    <img src="./assets/Logo.png" alt="Logo" class="h-[30px]">
+                    <img src="./assets/Logo.png" alt="Logo" class="h-[70px]">
                 </div>
                 <div>
                     <nav class="space-x-6">
-                        <a href="/" class="text-gray-700 hover:text-green-600">Home</a>
+                        <a href="./home.html" class="text-gray-700 hover:text-green-600">Home</a>
                         <a href="./ExploreState.html" class="text-gray-700 hover:text-green-600">Explore States</a>
                         <a href="/" class="text-gray-700 hover:text-green-600">Analytics</a>
                         <a href="/" class="text-gray-700 hover:text-green-600">Downloads</a>
@@ -62,7 +62,7 @@ and gas reserves, a strong entrepreneurial culture, and governmentdriven industr
                     <div class="bg-[#4A3AFF1A] p-6 rounded-2xl space-y-4">
                         <div class="w-12 h-12 bg-gray-300 rounded-md"></div>
                         <div>
-                            <h3 class="text-[#4A3AFF] text-xl font-bold">$1.5 Billion</h3>
+                            <h3 class="text-[#4A3AFF] text-xl font-bold">$65.9 Million</h3>
                             <p class="text-[#4A3AFF]">2025 IGR Projection</p>
                         </div>
                     </div>
@@ -70,7 +70,7 @@ and gas reserves, a strong entrepreneurial culture, and governmentdriven industr
                     <div class="bg-[#FF718B1A] p-6 rounded-2xl space-y-4">
                         <div class="w-12 h-12 bg-gray-300 rounded-md"></div>
                         <div>
-                            <h3 class="text-xl font-bold">15.8 Million</h3>
+                            <h3 class="text-xl font-bold">4.5 Million</h3>
                             <p>Est. Population 2025</p>
                         </div>
                     </div>
@@ -78,7 +78,7 @@ and gas reserves, a strong entrepreneurial culture, and governmentdriven industr
                     <div class="bg-[#37996B1A] p-6 rounded-2xl space-y-4">
                         <div class="w-12 h-12 bg-gray-300 rounded-md"></div>
                         <div>
-                            <h3 class="text-xl font-bold">$2.2 Billion</h3>
+                            <h3 class="text-xl font-bold">$477.6 Million</h3>
                             <p>2025 Budget</p>
                         </div>
                     </div>
@@ -86,7 +86,7 @@ and gas reserves, a strong entrepreneurial culture, and governmentdriven industr
                     <div class="bg-[#E0F7EE] p-6 rounded-2xl space-y-4">
                         <div class="w-12 h-12 bg-gray-300 rounded-md"></div>
                         <div>
-                            <h3 class="text-xl font-bold">$6.8 Million</h3>
+                            <h3 class="text-xl font-bold">$1.6 Million</h3>
                             <p>2020 Labour Force</p>
                         </div>
                     </div>
@@ -454,11 +454,6 @@ opportunities for oil refineries, LNG, and CNG plants</li>
                     </div>
 
                 </div>
-                
-                    <button onclick="ty()" class="border-2 mt-8 hover:bg-[#2D7C59] hover:text-white hover:transition-all rounded-lg w-full p-2 cursor-pointer">
-                        <span>More</span>
-                        <i class="fa fa-angle-down"></i>
-                    </button>
             </section>
         </main>
 
@@ -466,7 +461,7 @@ opportunities for oil refineries, LNG, and CNG plants</li>
 
         <footer class="relative p-14 px-0">
             <div class="flex items-center justify-between">
-                <img src="./assets/Logo.png" alt="Logo" class="h-8">
+                <img src="./assets/Logo.png" alt="Logo" class="h-[70px]">
                 <div>
                     <h2 class="text-lg font-semibold">Quick Link</h2>
                     <nav class="space-x-3">
