--- a/BauchiState.html
+++ b/BauchiState.html
@@ -14,7 +14,7 @@
         <header class="relative p-6 px-0">
             <div class="flex items-center justify-between">
                 <div>
-                    <img src="./assets/Logo.png" alt="Logo" class="h-[30px]">
+                    <img src="./assets/Logo.png" alt="Logo" class="h-[70px]">
                 </div>
                 <div>
                     <nav class="space-x-6">
@@ -49,12 +49,12 @@
                 <div class="max-w-2xl space-y-4">
                     <h1 class="text-3xl font-bold">Bauchi State</h1>
                     <p class="leading-relaxed">Bauchi State, situated in northeastern Nigeria, is endowed with abundant
-mineral and fertile land resources. The state produces a variety of crops
-including maize, rice, millet, groundnuts, and cotton, and also supports
-livestock farming. It is home to Yankari National Park, one of Nigeria’s
-premier wildlife and eco-tourism destinations. The state government
-focuses on advancing agriculture, education, tourism, and infrastructure
-as key drivers of development.   
+                        mineral and fertile land resources. The state produces a variety of crops
+                        including maize, rice, millet, groundnuts, and cotton, and also supports
+                        livestock farming. It is home to Yankari National Park, one of Nigeria’s
+                        premier wildlife and eco-tourism destinations. The state government
+                        focuses on advancing agriculture, education, tourism, and infrastructure
+                        as key drivers of development.
                     </p>
                 </div>
             </section>
@@ -145,10 +145,11 @@ as key drivers of development.
                         <h1 class="text-2xl font-bold">Key Policy Initiatives</h1>
                         <ul class="list-disc pl-5 space-y-3 text-gray-700">
                             <li>Ease of Doing Business reforms</li>
-<li>Agricultural Transformation Agenda</li>
-<li>Tourism Promotion Policy</li>
-<li>Custom duty waivers on machinery and equipment for investors in priority sectors</li>
-<li>Access to finance and credit schemes by collaborating with development finance institutions to provide investor credit access</li>
+                            <li>Agricultural Transformation Agenda</li>
+                            <li>Tourism Promotion Policy</li>
+                            <li>Custom duty waivers on machinery and equipment for investors in priority sectors</li>
+                            <li>Access to finance and credit schemes by collaborating with development finance
+                                institutions to provide investor credit access</li>
                         </ul>
                     </div>
 
@@ -156,63 +157,205 @@ as key drivers of development.
                         <h1 class="text-2xl font-bold">Competitive Advantage</h1>
                         <ul class="list-disc pl-5 space-y-3 text-gray-700">
                             <li>4.2 million hectares of vast arable land for cultivation</li>
-<li>Geographical position, sharing borders with seven States facilitating access to various markets</li>
-<li>Well-developed transport infrastructure</li>
-<li>Solid mineral deposits</li>
-<li>Ranked 4th in the 2021 subnational Ease of Doing Business rankings</li>
+                            <li>Geographical position, sharing borders with seven States facilitating access to various
+                                markets</li>
+                            <li>Well-developed transport infrastructure</li>
+                            <li>Solid mineral deposits</li>
+                            <li>Ranked 4th in the 2021 subnational Ease of Doing Business rankings</li>
                         </ul>
                     </div>
                 </div>
             </section>
 
-            <!-- Downloadable Reports -->
-            <section>
-                <h1 class="font-bold text-2xl mb-8">Downloadable Reports</h1>
-                <div class="space-y-6">
-                    <div class="flex flex-col sm:flex-row justify-between items-center gap-6 p-6 border rounded-2xl">
-                        <div class="flex items-center gap-4">
-                            <img src="./assets/image 6.png" alt="" class="w-16 h-16 object-cover rounded-md" />
-                            <p class="font-semibold">Lagos State Investment Guide (PDF)</p>
+           <section class="my-20 w-full px-4 md:px-12">
+                <h1 class="font-bold text-3xl mb-8 text-center md:text-left">
+                    Featured Opportunities
+                </h1>
+
+                <!-- Responsive Grid -->
+                <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8">
+                    <!-- Card 1 -->
+                    <div
+                        class="bg-white rounded-xl shadow-md overflow-hidden hover:shadow-lg transition-all duration-300">
+                        <div class="aspect-[4/3] overflow-hidden">
+                            <img src="./assets/image 1.png" alt="Lagos Tech Innovation Hub"
+                                class="w-full h-full object-cover" />
                         </div>
-                        <button
-                            class="flex items-center gap-2 bg-[#2D7C59] text-white px-6 py-2 rounded-lg hover:bg-[#256947] transition">
-                            <span>Download</span>
-                            <i class="fas fa-download"></i>
-                        </button>
+                        <div class="p-4 space-y-2">
+                            <h2 class="text-xl font-bold">Commercial Fodder Production for Export</h2>
+                            <div class="grid grid-cols-2 gap-1 text-gray-700 text-sm">
+                                <div>Sector:</div>
+                                <div>Agriculture</div>
+                                <div>Project Status:</div>
+                                <div>Initiation</div>
+                                <div>Project Value:</div>
+                                <div>$2,400,000</div>
+                                <div>Investment Required:</div>
+                                <div>$1,200,000</div>
+                            </div>
+                            <!-- <button class="flex items-center gap-2 text-[#2D7C59] hover:underline mt-3">
+                                <span>View Details</span>
+                                <i class="fa fa-arrow-right"></i>
+                            </button> -->
+                        </div>
                     </div>
 
-                    <div class="flex flex-col sm:flex-row justify-between items-center gap-6 p-6 border rounded-2xl">
-                        <div class="flex items-center gap-4">
-                            <img src="./assets/image 6.png" alt="" class="w-16 h-16 object-cover rounded-md" />
-                            <p class="font-semibold">2025 Infrastructure Development Plan (PDF)</p>
+                    <!-- Card 2 -->
+                    <div
+                        class="bg-white rounded-xl shadow-md overflow-hidden hover:shadow-lg transition-all duration-300">
+                        <div class="aspect-[4/3] overflow-hidden">
+                            <img src="./assets/image 1.png" alt="Kano Agricultural Processing Park"
+                                class="w-full h-full object-cover" />
                         </div>
-                        <button
-                            class="flex items-center gap-2 bg-[#2D7C59] text-white px-6 py-2 rounded-lg hover:bg-[#256947] transition">
-                            <span>Download</span>
-                            <i class="fas fa-download"></i>
-                        </button>
+                        <div class="p-4 space-y-2">
+                            <h2 class="text-xl font-bold">Development of Closed Agribusiness Greenhouse Farms
+                            </h2>
+                            <div class="grid grid-cols-2 gap-1 text-gray-700 text-sm">
+                                <div>Sector:</div>
+                                <div>Agriculture</div>
+                                <div>Project Status:</div>
+                                <div>Initiation</div>
+                                <div>Project Value:</div>
+                                <div>$15,000,000</div>
+                                <div>Investment Required:</div>
+                                <div>$7,500,000</div>
+                            </div>
+                            <!-- <button class="flex items-center gap-2 text-[#2D7C59] hover:underline mt-3">
+                                <span>View Details</span>
+                                <i class="fa fa-arrow-right"></i>
+                            </button> -->
+                        </div>
                     </div>
 
-                    <div class="flex flex-col sm:flex-row justify-between items-center gap-6 p-6 border rounded-2xl">
-                        <div class="flex items-center gap-4">
-                            <img src="./assets/image 6.png" alt="" class="w-16 h-16 object-cover rounded-md" />
-                            <p class="font-semibold">Sector Report: Real Estate & Housing (PDF)</p>
+                    <!-- Card 3 -->
+                    <div
+                        class="bg-white rounded-xl shadow-md overflow-hidden hover:shadow-lg transition-all duration-300">
+                        <div class="aspect-[4/3] overflow-hidden">
+                            <img src="./assets/image 1.png" alt="Abuja Real Estate Development"
+                                class="w-full h-full object-cover" />
                         </div>
-                        <button
-                            class="flex items-center gap-2 bg-[#2D7C59] text-white px-6 py-2 rounded-lg hover:bg-[#256947] transition">
-                            <span>Download</span>
-                            <i class="fas fa-download"></i>
-                        </button>
+                        <div class="p-4 space-y-2">
+                            <h2 class="text-xl font-bold">Revival of Bauchi Plastic Industry Limited
+                            </h2>
+                            <div class="grid grid-cols-2 gap-1 text-gray-700 text-sm">
+                                <div>Sector:</div>
+                                <div>Commerce</div>
+                                <div>Project Status:</div>
+                                <div>Initiation</div>
+                                <div>Project Value:</div>
+                                <div>$8,000,000</div>
+                                <div>Investment Required:</div>
+                                <div>$4,000,000</div>
+                            </div>
+                        </div>
                     </div>
-                </div>
+<!-- 
+                     <div class="bg-white rounded-xl shadow-md overflow-hidden hover:shadow-lg transition-all duration-300">
+                        <div class="aspect-[4/3] overflow-hidden">
+                            <img src="./assets/image 1.png" alt="Kano Agricultural Processing Park"
+                                class="w-full h-full object-cover" />
+                        </div>
+                        <div class="p-4 space-y-2">
+                            <h2 class="text-xl font-bold">Ebonyi Pipes Production Company
+                            </h2>
+                            <div class="grid grid-cols-2 gap-1 text-gray-700 text-sm">
+                                <div>Sector:</div>
+                                <div>Industry</div>
+                                <div>Project Status:</div>
+                                <div>Operation</div>
+                                <div>Project Value:</div>
+                                <div>$960,000</div>
+                                <div>Investment Required:</div>
+                                <div>$480,000</div>
+                            </div>
+                            <button class="flex items-center gap-2 text-[#2D7C59] hover:underline mt-3">
+                                <span>View Details</span>
+                                <i class="fa fa-arrow-right"></i>
+                            </button>
+                        </div>
+                    </div> -->
+
+                    <!-- Card 3 -->
+                    <!-- <div
+                        class="bg-white rounded-xl shadow-md overflow-hidden hover:shadow-lg transition-all duration-300">
+                        <div class="aspect-[4/3] overflow-hidden">
+                            <img src="./assets/image 1.png" alt="Abuja Real Estate Development"
+                                class="w-full h-full object-cover" />
+                        </div>
+                        <div class="p-4 space-y-2">
+                            <h2 class="text-xl font-bold">ICT/Aeronautic University
+                            </h2>
+                            <div class="grid grid-cols-2 gap-1 text-gray-700 text-sm">
+                                <div>Sector:</div>
+                                <div>Aviaion</div>
+                                <div>Project Status:</div>
+                                <div>Operation</div>
+                                <div>Project Value:</div>
+                                <div>$3,900,000</div>
+                                <div>Investment Required:</div>
+                                <div>$1,950,000</div>
+                            </div>
+                        </div>
+                    </div> -->
+
+                     <!-- Card 3 -->
+                    <!-- <div
+                        class="bg-white rounded-xl shadow-md overflow-hidden hover:shadow-lg transition-all duration-300">
+                        <div class="aspect-[4/3] overflow-hidden">
+                            <img src="./assets/image 1.png" alt="Abuja Real Estate Development"
+                                class="w-full h-full object-cover" />
+                        </div>
+                        <div class="p-4 space-y-2">
+                            <h2 class="text-xl font-bold">Development of Ebonyi Industrial
+                            </h2>
+                            <div class="grid grid-cols-2 gap-1 text-gray-700 text-sm">
+                                <div>Sector:</div>
+                                <div>Industry</div>
+                                <div>Project Status:</div>
+                                <div>Operation</div>
+                                <div>Project Value:</div>
+                                <div>$12,900,000</div>
+                                <div>Investment Required:</div>
+                                <div>$6,450,000</div>
+                            </div>
+                        </div>
+                    </div> -->
+                  <!-- Card 2 -->
+                    <!-- <div
+                        class="bg-white rounded-xl shadow-md overflow-hidden hover:shadow-lg transition-all duration-300">
+                        <div class="aspect-[4/3] overflow-hidden">
+                            <img src="./assets/image 1.png" alt="Kano Agricultural Processing Park"
+                                class="w-full h-full object-cover" />
+                        </div>
+                        <div class="p-4 space-y-2">
+                            <h2 class="text-xl font-bold">Establishment of Ebonyi Teaching hospital
+                            </h2>
+                            <div class="grid grid-cols-2 gap-1 text-gray-700 text-sm">
+                                <div>Sector:</div>
+                                <div>Healthcare</div>
+                                <div>Project Status:</div>
+                                <div>Operation</div>
+                                <div>Project Value:</div>
+                                <div>$2,000,000</div>
+                                <div>Investment Required:</div>
+                                <div>$1,000,000</div>
+                            </div>
+                            <button class="flex items-center gap-2 text-[#2D7C59] hover:underline mt-3">
+                                <span>View Details</span>
+                                <i class="fa fa-arrow-right"></i>
+                            </button>
+                        </div>
+                    </div> -->
             </section>
+
+            
         </main>
 
 
 
         <footer class="relative p-14 px-0">
             <div class="flex items-center justify-between">
-                <img src="./assets/Logo.png" alt="Logo" class="h-8">
+                <img src="./assets/Logo.png" alt="Logo" class="h-[70px]">
                 <div>
                     <h2 class="text-lg font-semibold">Quick Link</h2>
                     <nav class="space-x-3">
