--- a/BayelsaState.html
+++ b/BayelsaState.html
@@ -7,6 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" type="text/css"
         href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" />
+    <link rel="stylesheet" type="text/css" href="./stylesheet/style.css">
 </head>
 
 <body>
@@ -14,11 +15,11 @@
         <header class="relative p-6 px-0">
             <div class="flex items-center justify-between">
                 <div>
-                    <img src="./assets/Logo.png" alt="Logo" class="h-[30px]">
+                    <img src="./assets/Logo.png" alt="Logo" class="h-[70px]">
                 </div>
                 <div>
                     <nav class="space-x-6">
-                        <a href="/" class="text-gray-700 hover:text-green-600">Home</a>
+                        <a href="./home.html" class="text-gray-700 hover:text-green-600">Home</a>
                         <a href="./ExploreState.html" class="text-gray-700 hover:text-green-600">Explore States</a>
                         <a href="/" class="text-gray-700 hover:text-green-600">Analytics</a>
                         <a href="/" class="text-gray-700 hover:text-green-600">Downloads</a>
@@ -48,11 +49,12 @@
             <section class="text-gray-800">
                 <div class="max-w-2xl space-y-4">
                     <h1 class="text-3xl font-bold">Bayelsa State</h1>
-                    <p class="leading-relaxed">Bayelsa State, a major oil-producing region in South-South Nigeria, is rich
-in natural resources and economic potential. With vast waterways
-supporting fishing and a strong cultural heritage, it is home to Oloibiri,
-Nigeria’s first commercial oil site. Ongoing infrastructure and
-diversification efforts make it a promising investment destination. 
+                    <p class="leading-relaxed">Bayelsa State, a major oil-producing region in South-South Nigeria, is
+                        rich
+                        in natural resources and economic potential. With vast waterways
+                        supporting fishing and a strong cultural heritage, it is home to Oloibiri,
+                        Nigeria’s first commercial oil site. Ongoing infrastructure and
+                        diversification efforts make it a promising investment destination.
                     </p>
                 </div>
             </section>
@@ -142,11 +144,12 @@ diversification efforts make it a promising investment destination.
                     <div class="bg-[#FAFAFA] p-8 rounded-2xl space-y-5">
                         <h1 class="text-2xl font-bold">Key Policy Initiatives</h1>
                         <ul class="list-disc pl-5 space-y-3 text-gray-700">
-                            <li>Establishment of the Bayelsa State Investment Promotion Agency (BIPA) for ease of doing business</li>
-<li>Land banking efforts to improve access to farmland for investors</li>
-<li>Tax incentives for agriculture, aquaculture, and renewable energy sectors</li>
-<li>Public-Private Partnerships (PPP) to promote infrastructure development</li>
-<li>Development of one-stop-shop platforms to simplify investment procedures</li>
+                            <li>Establishment of the Bayelsa State Investment Promotion Agency (BIPA) for ease of doing
+                                business</li>
+                            <li>Land banking efforts to improve access to farmland for investors</li>
+                            <li>Tax incentives for agriculture, aquaculture, and renewable energy sectors</li>
+                            <li>Public-Private Partnerships (PPP) to promote infrastructure development</li>
+                            <li>Development of one-stop-shop platforms to simplify investment procedures</li>
                         </ul>
                     </div>
 
@@ -154,55 +157,220 @@ diversification efforts make it a promising investment destination.
                         <h1 class="text-2xl font-bold">Competitive Advantage</h1>
                         <ul class="list-disc pl-5 space-y-3 text-gray-700">
                             <li>Rich in oil and gas, making it a hub for Nigeria's oil industry</li>
-<li>Longest coastline in Nigeria (approximately 203km)</li>
-<li>Extensive agricultural land for large-scale cassava, oil palm, and plantain cultivation</li>
-<li>Tourism potential with attractions like Lake Efi, Oloibiri Oil Museum, and cultural heritage</li>
-<li>Presence of research and learning Institutes like NCDMB, Niger Delta University, and Federal University Otuoke</li>
+                            <li>Longest coastline in Nigeria (approximately 203km)</li>
+                            <li>Extensive agricultural land for large-scale cassava, oil palm, and plantain cultivation
+                            </li>
+                            <li>Tourism potential with attractions like Lake Efi, Oloibiri Oil Museum, and cultural
+                                heritage</li>
+                            <li>Presence of research and learning Institutes like NCDMB, Niger Delta University, and
+                                Federal University Otuoke</li>
                         </ul>
                     </div>
                 </div>
             </section>
 
-            <!-- Downloadable Reports -->
-            <section>
-                <h1 class="font-bold text-2xl mb-8">Downloadable Reports</h1>
-                <div class="space-y-6">
-                    <div class="flex flex-col sm:flex-row justify-between items-center gap-6 p-6 border rounded-2xl">
-                        <div class="flex items-center gap-4">
-                            <img src="./assets/image 6.png" alt="" class="w-16 h-16 object-cover rounded-md" />
-                            <p class="font-semibold">Lagos State Investment Guide (PDF)</p>
+            <section class="my-20 w-full px-4 md:px-12">
+                <h1 class="font-bold text-3xl mb-8 text-center md:text-left">
+                    Featured Opportunities
+                </h1>
+
+                <!-- Responsive Grid -->
+                <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8">
+                    <!-- Card 1 -->
+                    <div
+                        class="bg-white rounded-xl shadow-md overflow-hidden hover:shadow-lg transition-all duration-300">
+                        <div class="aspect-[4/3] overflow-hidden">
+                            <img src="./assets/image 1.png" alt="Lagos Tech Innovation Hub"
+                                class="w-full h-full object-cover" />
                         </div>
-                        <button
-                            class="flex items-center gap-2 bg-[#2D7C59] text-white px-6 py-2 rounded-lg hover:bg-[#256947] transition">
-                            <span>Download</span>
-                            <i class="fas fa-download"></i>
-                        </button>
+                        <div class="p-4 space-y-2">
+                            <h2 class="text-xl font-bold">Bayelsa Agro Park</h2>
+                            <div class="grid grid-cols-2 gap-1 text-gray-700 text-sm">
+                                <div>Sector:</div>
+                                <div>Agriculture</div>
+                                <div>Project Status:</div>
+                                <div>Planning</div>
+                                <div>Project Value:</div>
+                                <div>$33,000,000</div>
+                                <div>Investment Required:</div>
+                                <div>$16,500,000</div>
+                            </div>
+                            <!-- <button class="flex items-center gap-2 text-[#2D7C59] hover:underline mt-3">
+                                <span>View Details</span>
+                                <i class="fa fa-arrow-right"></i>
+                            </button> -->
+                        </div>
                     </div>
 
-                    <div class="flex flex-col sm:flex-row justify-between items-center gap-6 p-6 border rounded-2xl">
-                        <div class="flex items-center gap-4">
-                            <img src="./assets/image 6.png" alt="" class="w-16 h-16 object-cover rounded-md" />
-                            <p class="font-semibold">2025 Infrastructure Development Plan (PDF)</p>
+                    <!-- Card 2 -->
+                    <div
+                        class="bg-white rounded-xl shadow-md overflow-hidden hover:shadow-lg transition-all duration-300">
+                        <div class="aspect-[4/3] overflow-hidden">
+                            <img src="./assets/image 1.png" alt="Kano Agricultural Processing Park"
+                                class="w-full h-full object-cover" />
                         </div>
-                        <button
-                            class="flex items-center gap-2 bg-[#2D7C59] text-white px-6 py-2 rounded-lg hover:bg-[#256947] transition">
-                            <span>Download</span>
-                            <i class="fas fa-download"></i>
-                        </button>
+                        <div class="p-4 space-y-2">
+                            <h2 class="text-xl font-bold">Bayelsa Deep Sea Port Project
+                            </h2>
+                            <div class="grid grid-cols-2 gap-1 text-gray-700 text-sm">
+                                <div>Sector:</div>
+                                <div>Marine</div>
+                                <div>Project Status:</div>
+                                <div>Initiation</div>
+                                <div>Project Value:</div>
+                                <div>$1,000,000,000</div>
+                                <div>Investment Required:</div>
+                                <div>$500,000,000</div>
+                            </div>
+                            <!-- <button class="flex items-center gap-2 text-[#2D7C59] hover:underline mt-3">
+                                <span>View Details</span>
+                                <i class="fa fa-arrow-right"></i>
+                            </button> -->
+                        </div>
                     </div>
 
-                    <div class="flex flex-col sm:flex-row justify-between items-center gap-6 p-6 border rounded-2xl">
-                        <div class="flex items-center gap-4">
-                            <img src="./assets/image 6.png" alt="" class="w-16 h-16 object-cover rounded-md" />
-                            <p class="font-semibold">Sector Report: Real Estate & Housing (PDF)</p>
+                    <!-- Card 3 -->
+                    <div
+                        class="bg-white rounded-xl shadow-md overflow-hidden hover:shadow-lg transition-all duration-300">
+                        <div class="aspect-[4/3] overflow-hidden">
+                            <img src="./assets/image 1.png" alt="Abuja Real Estate Development"
+                                class="w-full h-full object-cover" />
                         </div>
-                        <button
-                            class="flex items-center gap-2 bg-[#2D7C59] text-white px-6 py-2 rounded-lg hover:bg-[#256947] transition">
-                            <span>Download</span>
-                            <i class="fas fa-download"></i>
-                        </button>
+                        <div class="p-4 space-y-2">
+                            <h2 class="text-xl font-bold">Bayelsa 500-Unit Housing Project for Civil Servants
+                            </h2>
+                            <div class="grid grid-cols-2 gap-1 text-gray-700 text-sm">
+                                <div>Sector:</div>
+                                <div>Real Estate</div>
+                                <div>Project Status:</div>
+                                <div>Initiation</div>
+                                <div>Project Value:</div>
+                                <div>$8,500,000</div>
+                                <div>Investment Required:</div>
+                                <div>$4,250,000</div>
+                            </div>
+                        </div>
                     </div>
-                </div>
+
+                    <div
+                        class="bg-white rounded-xl shadow-md overflow-hidden hover:shadow-lg transition-all duration-300">
+                        <div class="aspect-[4/3] overflow-hidden">
+                            <img src="./assets/image 1.png" alt="Kano Agricultural Processing Park"
+                                class="w-full h-full object-cover" />
+                        </div>
+                        <div class="p-4 space-y-2">
+                            <h2 class="text-xl font-bold">Dr Brix Lake Marine & Fisheries Complex
+                            </h2>
+                            <div class="grid grid-cols-2 gap-1 text-gray-700 text-sm">
+                                <div>Sector:</div>
+                                <div>Marine</div>
+                                <div>Project Status:</div>
+                                <div>Planning</div>
+                                <div>Project Value:</div>
+                                <div>$4,500,000</div>
+                                <div>Investment Required:</div>
+                                <div>$2,250,000</div>
+                            </div>
+                            <!-- <button class="flex items-center gap-2 text-[#2D7C59] hover:underline mt-3">
+                                <span>View Details</span>
+                                <i class="fa fa-arrow-right"></i>
+                            </button> -->
+                        </div>
+                    </div>
+
+                    <!-- Card 3 -->
+                    <div
+                        class="bg-white rounded-xl shadow-md overflow-hidden hover:shadow-lg transition-all duration-300">
+                        <div class="aspect-[4/3] overflow-hidden">
+                            <img src="./assets/image 1.png" alt="Abuja Real Estate Development"
+                                class="w-full h-full object-cover" />
+                        </div>
+                        <div class="p-4 space-y-2">
+                            <h2 class="text-xl font-bold">Yenagoa Fishport
+                            </h2>
+                            <div class="grid grid-cols-2 gap-1 text-gray-700 text-sm">
+                                <div>Sector:</div>
+                                <div>Marine</div>
+                                <div>Project Status:</div>
+                                <div>Implementation</div>
+                                <div>Project Value:</div>
+                                <div>$2,000,000</div>
+                                <div>Investment Required:</div>
+                                <div>$1,000,000</div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Card 3 -->
+                    <div
+                        class="bg-white rounded-xl shadow-md overflow-hidden hover:shadow-lg transition-all duration-300">
+                        <div class="aspect-[4/3] overflow-hidden">
+                            <img src="./assets/image 1.png" alt="Abuja Real Estate Development"
+                                class="w-full h-full object-cover" />
+                        </div>
+                        <div class="p-4 space-y-2">
+                            <h2 class="text-xl font-bold">Kaiama Fishport
+                            </h2>
+                            <div class="grid grid-cols-2 gap-1 text-gray-700 text-sm">
+                                <div>Sector:</div>
+                                <div>Marine</div>
+                                <div>Project Status:</div>
+                                <div>Implementation</div>
+                                <div>Project Value:</div>
+                                <div>$2,000,000</div>
+                                <div>Investment Required:</div>
+                                <div>$1,000,000</div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Card 2 -->
+                    <div
+                        class="bg-white rounded-xl shadow-md overflow-hidden hover:shadow-lg transition-all duration-300">
+                        <div class="aspect-[4/3] overflow-hidden">
+                            <img src="./assets/image 1.png" alt="Kano Agricultural Processing Park"
+                                class="w-full h-full object-cover" />
+                        </div>
+                        <div class="p-4 space-y-2">
+                            <h2 class="text-xl font-bold">Ogboinbiri Fishport
+                            </h2>
+                            <div class="grid grid-cols-2 gap-1 text-gray-700 text-sm">
+                                <div>Sector:</div>
+                                <div>Marine</div>
+                                <div>Project Status:</div>
+                                <div>Implementation</div>
+                                <div>Project Value:</div>
+                                <div>$2,800,000</div>
+                                <div>Investment Required:</div>
+                                <div>$1,400,000</div>
+                            </div>
+                            <!-- <button class="flex items-center gap-2 text-[#2D7C59] hover:underline mt-3">
+                                <span>View Details</span>
+                                <i class="fa fa-arrow-right"></i>
+                            </button> -->
+                        </div>
+                    </div>
+
+                    <!-- Card 3 -->
+                    <div class="bg-white rounded-xl shadow-md overflow-hidden hover:shadow-lg transition-all duration-300">
+                        <div class="aspect-[4/3] overflow-hidden">
+                            <img src="./assets/image 1.png" alt="Abuja Real Estate Development"
+                                class="w-full h-full object-cover" />
+                        </div>
+                        <div class="p-4 space-y-2">
+                            <h2 class="text-xl font-bold">Fish Village
+                            </h2>
+                            <div class="grid grid-cols-2 gap-1 text-gray-700 text-sm">
+                                <div>Sector:</div>
+                                <div>Marine</div>
+                                <div>Project Status:</div>
+                                <div>Planning</div>
+                                <div>Project Value:</div>
+                                <div>$95,000,000</div>
+                                <div>Investment Required:</div>
+                                <div>$47,500,000</div>
+                          </div>
+                       </div>
+                    </div>
             </section>
         </main>
 
@@ -210,7 +378,7 @@ diversification efforts make it a promising investment destination.
 
         <footer class="relative p-14 px-0">
             <div class="flex items-center justify-between">
-                <img src="./assets/Logo.png" alt="Logo" class="h-8">
+                <img src="./assets/Logo.png" alt="Logo" class="h-[70px]">
                 <div>
                     <h2 class="text-lg font-semibold">Quick Link</h2>
                     <nav class="space-x-3">
@@ -239,6 +407,7 @@ diversification efforts make it a promising investment destination.
     </div>
 
     <script src="https://cdn.tailwindcss.com"></script>
+    <script src="./script/script.js"></script>
 </body>
 
 </html>
