--- a/CrossRiverState.html
+++ b/CrossRiverState.html
@@ -14,7 +14,7 @@
         <header class="relative p-6 px-0">
             <div class="flex items-center justify-between">
                 <div>
-                    <img src="./assets/Logo.png" alt="Logo" class="h-[30px]">
+                    <img src="./assets/Logo.png" alt="Logo" class="h-[70px]">
                 </div>
                 <div>
                     <nav class="space-x-6">
@@ -48,11 +48,12 @@
             <section class="text-gray-800">
                 <div class="max-w-2xl space-y-4">
                     <h1 class="text-3xl font-bold">CrossRivers State</h1>
-                    <p class="leading-relaxed">Cross River State, with Calabar as its capital, is a major hub for tourism,
-agriculture, and trade, sharing a border with Cameroon. The state is home
-to attractions like Obudu Mountain Resort and the Calabar Carnival. Its
-economy thrives on initiatives like the Calabar Free Trade Zone, with
-ongoing efforts to improve infrastructure and industrial development.
+                    <p class="leading-relaxed">Cross River State, with Calabar as its capital, is a major hub for
+                        tourism,
+                        agriculture, and trade, sharing a border with Cameroon. The state is home
+                        to attractions like Obudu Mountain Resort and the Calabar Carnival. Its
+                        economy thrives on initiatives like the Calabar Free Trade Zone, with
+                        ongoing efforts to improve infrastructure and industrial development.
                     </p>
                 </div>
             </section>
@@ -107,7 +108,8 @@ ongoing efforts to improve infrastructure and industrial development.
                         <p>Port</p>
                     </div>
                     <div class="space-y-2">
-                        <p class="font-semibold">Calabar Free Trade Zone (CFTZ), Tinapa Free Zone & Resort & Special Agro-Industrial Processing Zone (SAPZ)</p>
+                        <p class="font-semibold">Calabar Free Trade Zone (CFTZ), Tinapa Free Zone & Resort & Special
+                            Agro-Industrial Processing Zone (SAPZ)</p>
                         <p>Special Economic Zones</p>
                     </div>
                 </div>
@@ -143,9 +145,10 @@ ongoing efforts to improve infrastructure and industrial development.
                         <h1 class="text-2xl font-bold">Key Policy Initiatives</h1>
                         <ul class="list-disc pl-5 space-y-3 text-gray-700">
                             <li>Existing medium-long term economic development plan</li>
-<li>Existence of policies for development of tree crops including cocoa, oil palm and coffee</li>
-<li>Existence of statewide geo-localized soil survey analysis</li>
-<li>Strong governance and institutional framework</li>
+                            <li>Existence of policies for development of tree crops including cocoa, oil palm and coffee
+                            </li>
+                            <li>Existence of statewide geo-localized soil survey analysis</li>
+                            <li>Strong governance and institutional framework</li>
                         </ul>
                     </div>
 
@@ -153,56 +156,196 @@ ongoing efforts to improve infrastructure and industrial development.
                         <h1 class="text-2xl font-bold">Competitive Advantage</h1>
                         <ul class="list-disc pl-5 space-y-3 text-gray-700">
                             <li>Vast arable land size suited for crop production</li>
-<li>High deposits of solid minerals such as limestone, barite and granite</li>
-<li>Gateway to Eastern Maritime Corridor and Gulf of Guinea</li>
-<li>Rich natural environment with 2 waterfalls (Qua and Agbokim) & 2 forest reserves in Akamkpa and Boki</li>
-<li>Infrastructure quality and business climate</li>
-<li>Host to Africa’s biggest street party, the Carnival Calabar</li>
+                            <li>High deposits of solid minerals such as limestone, barite and granite</li>
+                            <li>Gateway to Eastern Maritime Corridor and Gulf of Guinea</li>
+                            <li>Rich natural environment with 2 waterfalls (Qua and Agbokim) & 2 forest reserves in
+                                Akamkpa and Boki</li>
+                            <li>Infrastructure quality and business climate</li>
+                            <li>Host to Africa’s biggest street party, the Carnival Calabar</li>
                         </ul>
                     </div>
                 </div>
             </section>
 
-            <!-- Downloadable Reports -->
-            <section>
-                <h1 class="font-bold text-2xl mb-8">Downloadable Reports</h1>
-                <div class="space-y-6">
-                    <div class="flex flex-col sm:flex-row justify-between items-center gap-6 p-6 border rounded-2xl">
-                        <div class="flex items-center gap-4">
-                            <img src="./assets/image 6.png" alt="" class="w-16 h-16 object-cover rounded-md" />
-                            <p class="font-semibold">Lagos State Investment Guide (PDF)</p>
+           <section class="my-20 w-full px-4 md:px-12">
+                <h1 class="font-bold text-3xl mb-8 text-center md:text-left">
+                    Featured Opportunities
+                </h1>
+
+                <!-- Responsive Grid -->
+                <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8">
+                    <!-- Card 1 -->
+                    <div
+                        class="bg-white rounded-xl shadow-md overflow-hidden hover:shadow-lg transition-all duration-300">
+                        <div class="aspect-[4/3] overflow-hidden">
+                            <img src="./assets/image 1.png" alt="Lagos Tech Innovation Hub"
+                                class="w-full h-full object-cover" />
                         </div>
-                        <button
-                            class="flex items-center gap-2 bg-[#2D7C59] text-white px-6 py-2 rounded-lg hover:bg-[#256947] transition">
-                            <span>Download</span>
-                            <i class="fas fa-download"></i>
-                        </button>
+                        <div class="p-4 space-y-2">
+                            <h2 class="text-xl font-bold">Orendeep Deep Sea Port</h2>
+                            <div class="grid grid-cols-2 gap-1 text-gray-700 text-sm">
+                                <div>Sector:</div>
+                                <div>Marine</div>
+                                <div>Project Status:</div>
+                                <div>Implementation</div>
+                                <div>Project Value:</div>
+                                <div>$3,500,000,000</div>
+                                <div>Investment Required:</div>
+                                <div>$1,750,000,000</div>
+                            </div>
+                            <!-- <button class="flex items-center gap-2 text-[#2D7C59] hover:underline mt-3">
+                                <span>View Details</span>
+                                <i class="fa fa-arrow-right"></i>
+                            </button> -->
+                        </div>
                     </div>
 
-                    <div class="flex flex-col sm:flex-row justify-between items-center gap-6 p-6 border rounded-2xl">
-                        <div class="flex items-center gap-4">
-                            <img src="./assets/image 6.png" alt="" class="w-16 h-16 object-cover rounded-md" />
-                            <p class="font-semibold">2025 Infrastructure Development Plan (PDF)</p>
+                    <!-- Card 2 -->
+                    <div
+                        class="bg-white rounded-xl shadow-md overflow-hidden hover:shadow-lg transition-all duration-300">
+                        <div class="aspect-[4/3] overflow-hidden">
+                            <img src="./assets/image 1.png" alt="Kano Agricultural Processing Park"
+                                class="w-full h-full object-cover" />
                         </div>
-                        <button
-                            class="flex items-center gap-2 bg-[#2D7C59] text-white px-6 py-2 rounded-lg hover:bg-[#256947] transition">
-                            <span>Download</span>
-                            <i class="fas fa-download"></i>
-                        </button>
+                        <div class="p-4 space-y-2">
+                            <h2 class="text-xl font-bold">Agricultural Hub and Food Transformation Centre
+                            </h2>
+                            <div class="grid grid-cols-2 gap-1 text-gray-700 text-sm">
+                                <div>Sector:</div>
+                                <div>Agriculture</div>
+                                <div>Project Status:</div>
+                                <div>Implementation</div>
+                                <div>Project Value:</div>
+                                <div>$37,000,000</div>
+                                <div>Investment Required:</div>
+                                <div>$18,500,000</div>
+                            </div>
+                            <!-- <button class="flex items-center gap-2 text-[#2D7C59] hover:underline mt-3">
+                                <span>View Details</span>
+                                <i class="fa fa-arrow-right"></i>
+                            </button> -->
+                        </div>
                     </div>
 
-                    <div class="flex flex-col sm:flex-row justify-between items-center gap-6 p-6 border rounded-2xl">
-                        <div class="flex items-center gap-4">
-                            <img src="./assets/image 6.png" alt="" class="w-16 h-16 object-cover rounded-md" />
-                            <p class="font-semibold">Sector Report: Real Estate & Housing (PDF)</p>
+                    <!-- Card 3 -->
+                    <div
+                        class="bg-white rounded-xl shadow-md overflow-hidden hover:shadow-lg transition-all duration-300">
+                        <div class="aspect-[4/3] overflow-hidden">
+                            <img src="./assets/image 1.png" alt="Abuja Real Estate Development"
+                                class="w-full h-full object-cover" />
                         </div>
-                        <button
-                            class="flex items-center gap-2 bg-[#2D7C59] text-white px-6 py-2 rounded-lg hover:bg-[#256947] transition">
-                            <span>Download</span>
-                            <i class="fas fa-download"></i>
-                        </button>
+                        <div class="p-4 space-y-2">
+                            <h2 class="text-xl font-bold">Railway project Calabar to Obudu
+                            </h2>
+                            <div class="grid grid-cols-2 gap-1 text-gray-700 text-sm">
+                                <div>Sector:</div>
+                                <div>Transportation</div>
+                                <div>Project Status:</div>
+                                <div>Initiation</div>
+                                <div>Project Value:</div>
+                                <div>$300,000,000</div>
+                                <div>Investment Required:</div>
+                                <div>$150,000,000</div>
+                            </div>
+                        </div>
                     </div>
-                </div>
+<!-- 
+                     <div class="bg-white rounded-xl shadow-md overflow-hidden hover:shadow-lg transition-all duration-300">
+                        <div class="aspect-[4/3] overflow-hidden">
+                            <img src="./assets/image 1.png" alt="Kano Agricultural Processing Park"
+                                class="w-full h-full object-cover" />
+                        </div>
+                        <div class="p-4 space-y-2">
+                            <h2 class="text-xl font-bold">Ebonyi Pipes Production Company
+                            </h2>
+                            <div class="grid grid-cols-2 gap-1 text-gray-700 text-sm">
+                                <div>Sector:</div>
+                                <div>Industry</div>
+                                <div>Project Status:</div>
+                                <div>Operation</div>
+                                <div>Project Value:</div>
+                                <div>$960,000</div>
+                                <div>Investment Required:</div>
+                                <div>$480,000</div>
+                            </div>
+                            <button class="flex items-center gap-2 text-[#2D7C59] hover:underline mt-3">
+                                <span>View Details</span>
+                                <i class="fa fa-arrow-right"></i>
+                            </button>
+                        </div>
+                    </div> -->
+
+                    <!-- Card 3 -->
+                    <!-- <div
+                        class="bg-white rounded-xl shadow-md overflow-hidden hover:shadow-lg transition-all duration-300">
+                        <div class="aspect-[4/3] overflow-hidden">
+                            <img src="./assets/image 1.png" alt="Abuja Real Estate Development"
+                                class="w-full h-full object-cover" />
+                        </div>
+                        <div class="p-4 space-y-2">
+                            <h2 class="text-xl font-bold">ICT/Aeronautic University
+                            </h2>
+                            <div class="grid grid-cols-2 gap-1 text-gray-700 text-sm">
+                                <div>Sector:</div>
+                                <div>Aviaion</div>
+                                <div>Project Status:</div>
+                                <div>Operation</div>
+                                <div>Project Value:</div>
+                                <div>$3,900,000</div>
+                                <div>Investment Required:</div>
+                                <div>$1,950,000</div>
+                            </div>
+                        </div>
+                    </div> -->
+
+                     <!-- Card 3 -->
+                    <!-- <div
+                        class="bg-white rounded-xl shadow-md overflow-hidden hover:shadow-lg transition-all duration-300">
+                        <div class="aspect-[4/3] overflow-hidden">
+                            <img src="./assets/image 1.png" alt="Abuja Real Estate Development"
+                                class="w-full h-full object-cover" />
+                        </div>
+                        <div class="p-4 space-y-2">
+                            <h2 class="text-xl font-bold">Development of Ebonyi Industrial
+                            </h2>
+                            <div class="grid grid-cols-2 gap-1 text-gray-700 text-sm">
+                                <div>Sector:</div>
+                                <div>Industry</div>
+                                <div>Project Status:</div>
+                                <div>Operation</div>
+                                <div>Project Value:</div>
+                                <div>$12,900,000</div>
+                                <div>Investment Required:</div>
+                                <div>$6,450,000</div>
+                            </div>
+                        </div>
+                    </div> -->
+                  <!-- Card 2 -->
+                    <!-- <div
+                        class="bg-white rounded-xl shadow-md overflow-hidden hover:shadow-lg transition-all duration-300">
+                        <div class="aspect-[4/3] overflow-hidden">
+                            <img src="./assets/image 1.png" alt="Kano Agricultural Processing Park"
+                                class="w-full h-full object-cover" />
+                        </div>
+                        <div class="p-4 space-y-2">
+                            <h2 class="text-xl font-bold">Establishment of Ebonyi Teaching hospital
+                            </h2>
+                            <div class="grid grid-cols-2 gap-1 text-gray-700 text-sm">
+                                <div>Sector:</div>
+                                <div>Healthcare</div>
+                                <div>Project Status:</div>
+                                <div>Operation</div>
+                                <div>Project Value:</div>
+                                <div>$2,000,000</div>
+                                <div>Investment Required:</div>
+                                <div>$1,000,000</div>
+                            </div>
+                            <button class="flex items-center gap-2 text-[#2D7C59] hover:underline mt-3">
+                                <span>View Details</span>
+                                <i class="fa fa-arrow-right"></i>
+                            </button>
+                        </div>
+                    </div> -->
             </section>
         </main>
 
@@ -210,7 +353,7 @@ ongoing efforts to improve infrastructure and industrial development.
 
         <footer class="relative p-14 px-0">
             <div class="flex items-center justify-between">
-                <img src="./assets/Logo.png" alt="Logo" class="h-8">
+                <img src="./assets/Logo.png" alt="Logo" class="h-[70px]">
                 <div>
                     <h2 class="text-lg font-semibold">Quick Link</h2>
                     <nav class="space-x-3">
