--- a/zamfarastate.html
+++ b/zamfarastate.html
@@ -338,7 +338,6 @@
                         </div>
                     </div>
                 </div>
-                </div>
 
                 
             </section>
@@ -349,7 +348,7 @@
 
         <footer class="relative p-14 px-0">
             <div class="flex items-center justify-between">
-                <img src="./assets/Logo.png" alt="Logo" class="h-8">
+                <img src="./assets/Logo.png" alt="Logo" class="h-[70px]">
                 <div>
                     <h2 class="text-lg font-semibold">Quick Link</h2>
                     <nav class="space-x-3">
