--- a/BornoState.html
+++ b/BornoState.html
@@ -14,7 +14,7 @@
         <header class="relative p-6 px-0">
             <div class="flex items-center justify-between">
                 <div>
-                    <img src="./assets/Logo.png" alt="Logo" class="h-[30px]">
+                    <img src="./assets/Logo.png" alt="Logo" class="h-[70px]">
                 </div>
                 <div>
                     <nav class="space-x-6">
@@ -48,11 +48,12 @@
             <section class="text-gray-800">
                 <div class="max-w-2xl space-y-4">
                     <h1 class="text-3xl font-bold">Borno State</h1>
-                    <p class="leading-relaxed">Borno State is the second largest state by land area and rich in agriculture,
-livestock, and trade, particularly around Lake Chad. Despite recent
-security challenges, the state is focused on reconstruction, infrastructure
-development, and economic recovery, offering opportunities in sectors
-like tourism and agribusiness
+                    <p class="leading-relaxed">Borno State is the second largest state by land area and rich in
+                        agriculture,
+                        livestock, and trade, particularly around Lake Chad. Despite recent
+                        security challenges, the state is focused on reconstruction, infrastructure
+                        development, and economic recovery, offering opportunities in sectors
+                        like tourism and agribusiness
                     </p>
                 </div>
             </section>
@@ -107,7 +108,8 @@ like tourism and agribusiness
                         <p>Port</p>
                     </div>
                     <div class="space-y-2">
-                        <p class="font-semibold">Makurdi Speicla Economic Zone & Speicial Agro-Industrial Processing Zone (SAPZ)</p>
+                        <p class="font-semibold">Makurdi Speicla Economic Zone & Speicial Agro-Industrial Processing
+                            Zone (SAPZ)</p>
                         <p>Special Economic Zones</p>
                     </div>
                 </div>
@@ -142,10 +144,11 @@ like tourism and agribusiness
                     <div class="bg-[#FAFAFA] p-8 rounded-2xl space-y-5">
                         <h1 class="text-2xl font-bold">Key Policy Initiatives</h1>
                         <ul class="list-disc pl-5 space-y-3 text-gray-700">
-                            <li>Established a one-stop-shop to facilitate investment, providing a single point of contact for investors</li>
-<li>Fast processing of land acquisition applications</li>
-<li>Tax relief for research and development</li>
-<li>Provision of infrastructural facilities such as road, water, electricity, etc</li>
+                            <li>Established a one-stop-shop to facilitate investment, providing a single point of
+                                contact for investors</li>
+                            <li>Fast processing of land acquisition applications</li>
+                            <li>Tax relief for research and development</li>
+                            <li>Provision of infrastructural facilities such as road, water, electricity, etc</li>
                         </ul>
                     </div>
 
@@ -153,57 +156,220 @@ like tourism and agribusiness
                         <h1 class="text-2xl font-bold">Competitive Advantage</h1>
                         <ul class="list-disc pl-5 space-y-3 text-gray-700">
                             <li>2nd largest state in Nigeria covering about 7.4% of Nigeria landmass</li>
-<li>Hub for cross-border trade, sharing borders with Cameroon, Chad, and Niger</li>
-<li>Significant mineral deposits, including limestone, marble, granite, and grade A gum arabic</li>
-<li>Over 1 million reserved lands for livestock production</li>
-<li>The state has a dedicated gum arabic belt</li>
-<li>Vast arable land for large-scale agricultural production</li>
-<li>Well-developed infrastructures like roads, water and electricity</li>
+                            <li>Hub for cross-border trade, sharing borders with Cameroon, Chad, and Niger</li>
+                            <li>Significant mineral deposits, including limestone, marble, granite, and grade A gum
+                                arabic</li>
+                            <li>Over 1 million reserved lands for livestock production</li>
+                            <li>The state has a dedicated gum arabic belt</li>
+                            <li>Vast arable land for large-scale agricultural production</li>
+                            <li>Well-developed infrastructures like roads, water and electricity</li>
                         </ul>
                     </div>
                 </div>
             </section>
 
-            <!-- Downloadable Reports -->
-            <section>
-                <h1 class="font-bold text-2xl mb-8">Downloadable Reports</h1>
-                <div class="space-y-6">
-                    <div class="flex flex-col sm:flex-row justify-between items-center gap-6 p-6 border rounded-2xl">
-                        <div class="flex items-center gap-4">
-                            <img src="./assets/image 6.png" alt="" class="w-16 h-16 object-cover rounded-md" />
-                            <p class="font-semibold">Lagos State Investment Guide (PDF)</p>
+           <section class="my-20 w-full px-4 md:px-12">
+                <h1 class="font-bold text-3xl mb-8 text-center md:text-left">
+                    Featured Opportunities
+                </h1>
+
+                <!-- Responsive Grid -->
+                <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8">
+                    <!-- Card 1 -->
+                    <div
+                        class="bg-white rounded-xl shadow-md overflow-hidden hover:shadow-lg transition-all duration-300">
+                        <div class="aspect-[4/3] overflow-hidden">
+                            <img src="./assets/image 1.png" alt="Lagos Tech Innovation Hub"
+                                class="w-full h-full object-cover" />
                         </div>
-                        <button
-                            class="flex items-center gap-2 bg-[#2D7C59] text-white px-6 py-2 rounded-lg hover:bg-[#256947] transition">
-                            <span>Download</span>
-                            <i class="fas fa-download"></i>
-                        </button>
+                        <div class="p-4 space-y-2">
+                            <h2 class="text-xl font-bold">Development of 300MW Cement Factory</h2>
+                            <div class="grid grid-cols-2 gap-1 text-gray-700 text-sm">
+                                <div>Sector:</div>
+                                <div>Industry</div>
+                                <div>Project Status:</div>
+                                <div>Implementation</div>
+                                <div>Project Value:</div>
+                                <div>$11,700,000</div>
+                                <div>Investment Required:</div>
+                                <div>$5,850,000</div>
+                            </div>
+                            <!-- <button class="flex items-center gap-2 text-[#2D7C59] hover:underline mt-3">
+                                <span>View Details</span>
+                                <i class="fa fa-arrow-right"></i>
+                            </button> -->
+                        </div>
                     </div>
 
-                    <div class="flex flex-col sm:flex-row justify-between items-center gap-6 p-6 border rounded-2xl">
-                        <div class="flex items-center gap-4">
-                            <img src="./assets/image 6.png" alt="" class="w-16 h-16 object-cover rounded-md" />
-                            <p class="font-semibold">2025 Infrastructure Development Plan (PDF)</p>
+                    <!-- Card 2 -->
+                    <div
+                        class="bg-white rounded-xl shadow-md overflow-hidden hover:shadow-lg transition-all duration-300">
+                        <div class="aspect-[4/3] overflow-hidden">
+                            <img src="./assets/image 1.png" alt="Kano Agricultural Processing Park"
+                                class="w-full h-full object-cover" />
                         </div>
-                        <button
-                            class="flex items-center gap-2 bg-[#2D7C59] text-white px-6 py-2 rounded-lg hover:bg-[#256947] transition">
-                            <span>Download</span>
-                            <i class="fas fa-download"></i>
-                        </button>
+                        <div class="p-4 space-y-2">
+                            <h2 class="text-xl font-bold">Livestock and breeding ranches and livestock processing centres
+                            </h2>
+                            <div class="grid grid-cols-2 gap-1 text-gray-700 text-sm">
+                                <div>Sector:</div>
+                                <div>Agriculture</div>
+                                <div>Project Status:</div>
+                                <div>Implementation</div>
+                                <div>Project Value:</div>
+                                <div>$4,000,000</div>
+                                <div>Investment Required:</div>
+                                <div>$2,000,000</div>
+                            </div>
+                            <!-- <button class="flex items-center gap-2 text-[#2D7C59] hover:underline mt-3">
+                                <span>View Details</span>
+                                <i class="fa fa-arrow-right"></i>
+                            </button> -->
+                        </div>
                     </div>
 
-                    <div class="flex flex-col sm:flex-row justify-between items-center gap-6 p-6 border rounded-2xl">
-                        <div class="flex items-center gap-4">
-                            <img src="./assets/image 6.png" alt="" class="w-16 h-16 object-cover rounded-md" />
-                            <p class="font-semibold">Sector Report: Real Estate & Housing (PDF)</p>
+                    <!-- Card 3 -->
+                    <div
+                        class="bg-white rounded-xl shadow-md overflow-hidden hover:shadow-lg transition-all duration-300">
+                        <div class="aspect-[4/3] overflow-hidden">
+                            <img src="./assets/image 1.png" alt="Abuja Real Estate Development"
+                                class="w-full h-full object-cover" />
                         </div>
-                        <button
-                            class="flex items-center gap-2 bg-[#2D7C59] text-white px-6 py-2 rounded-lg hover:bg-[#256947] transition">
-                            <span>Download</span>
-                            <i class="fas fa-download"></i>
-                        </button>
+                        <div class="p-4 space-y-2">
+                            <h2 class="text-xl font-bold">Irrigation schemes and food crop value chain processing centres
+                            </h2>
+                            <div class="grid grid-cols-2 gap-1 text-gray-700 text-sm">
+                                <div>Sector:</div>
+                                <div>Agriculture</div>
+                                <div>Project Status:</div>
+                                <div>Planning</div>
+                                <div>Project Value:</div>
+                                <div>$2,800,000</div>
+                                <div>Investment Required:</div>
+                                <div>$1,400,000</div>
+                            </div>
+                        </div>
                     </div>
-                </div>
+
+                    <div
+                        class="bg-white rounded-xl shadow-md overflow-hidden hover:shadow-lg transition-all duration-300">
+                        <div class="aspect-[4/3] overflow-hidden">
+                            <img src="./assets/image 1.png" alt="Kano Agricultural Processing Park"
+                                class="w-full h-full object-cover" />
+                        </div>
+                        <div class="p-4 space-y-2">
+                            <h2 class="text-xl font-bold">Renewable energy infrastructure and mining
+                            </h2>
+                            <div class="grid grid-cols-2 gap-1 text-gray-700 text-sm">
+                                <div>Sector:</div>
+                                <div>Mining</div>
+                                <div>Project Status:</div>
+                                <div>Planning</div>
+                                <div>Project Value:</div>
+                                <div>$1,600,000</div>
+                                <div>Investment Required:</div>
+                                <div>$800,000</div>
+                            </div>
+                            <!-- <button class="flex items-center gap-2 text-[#2D7C59] hover:underline mt-3">
+                                <span>View Details</span>
+                                <i class="fa fa-arrow-right"></i>
+                            </button> -->
+                        </div>
+                    </div>
+
+                    <!-- Card 3 -->
+                    <div
+                        class="bg-white rounded-xl shadow-md overflow-hidden hover:shadow-lg transition-all duration-300">
+                        <div class="aspect-[4/3] overflow-hidden">
+                            <img src="./assets/image 1.png" alt="Abuja Real Estate Development"
+                                class="w-full h-full object-cover" />
+                        </div>
+                        <div class="p-4 space-y-2">
+                            <h2 class="text-xl font-bold">Agro-allied industries
+                            </h2>
+                            <div class="grid grid-cols-2 gap-1 text-gray-700 text-sm">
+                                <div>Sector:</div>
+                                <div>Manufacturing</div>
+                                <div>Project Status:</div>
+                                <div>Planning</div>
+                                <div>Project Value:</div>
+                                <div>$6,300,000</div>
+                                <div>Investment Required:</div>
+                                <div>$3,150,000</div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Card 3 -->
+                    <div
+                        class="bg-white rounded-xl shadow-md overflow-hidden hover:shadow-lg transition-all duration-300">
+                        <div class="aspect-[4/3] overflow-hidden">
+                            <img src="./assets/image 1.png" alt="Abuja Real Estate Development"
+                                class="w-full h-full object-cover" />
+                        </div>
+                        <div class="p-4 space-y-2">
+                            <h2 class="text-xl font-bold">Solid Minerals exploration and extraction
+                            </h2>
+                            <div class="grid grid-cols-2 gap-1 text-gray-700 text-sm">
+                                <div>Sector:</div>
+                                <div>Minning</div>
+                                <div>Project Status:</div>
+                                <div>Planning</div>
+                                <div>Project Value:</div>
+                                <div>$4,000,000</div>
+                                <div>Investment Required:</div>
+                                <div>$2,000,000</div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Card 2 -->
+                    <!-- <div
+                        class="bg-white rounded-xl shadow-md overflow-hidden hover:shadow-lg transition-all duration-300">
+                        <div class="aspect-[4/3] overflow-hidden">
+                            <img src="./assets/image 1.png" alt="Kano Agricultural Processing Park"
+                                class="w-full h-full object-cover" />
+                        </div>
+                        <div class="p-4 space-y-2">
+                            <h2 class="text-xl font-bold">Ogboinbiri Fishport
+                            </h2>
+                            <div class="grid grid-cols-2 gap-1 text-gray-700 text-sm">
+                                <div>Sector:</div>
+                                <div>Marine</div>
+                                <div>Project Status:</div>
+                                <div>Implementation</div>
+                                <div>Project Value:</div>
+                                <div>$2,800,000</div>
+                                <div>Investment Required:</div>
+                                <div>$1,400,000</div>
+                            </div>
+                            <button class="flex items-center gap-2 text-[#2D7C59] hover:underline mt-3">
+                                <span>View Details</span>
+                                <i class="fa fa-arrow-right"></i>
+                            </button>
+                        </div>
+                    </div> -->
+
+                    <!-- Card 3 -->
+                    <!-- <div class="bg-white rounded-xl shadow-md overflow-hidden hover:shadow-lg transition-all duration-300">
+                        <div class="aspect-[4/3] overflow-hidden">
+                            <img src="./assets/image 1.png" alt="Abuja Real Estate Development"
+                                class="w-full h-full object-cover" />
+                        </div>
+                        <div class="p-4 space-y-2">
+                            <h2 class="text-xl font-bold">Fish Village
+                            </h2>
+                            <div class="grid grid-cols-2 gap-1 text-gray-700 text-sm">
+                                <div>Sector:</div>
+                                <div>Marine</div>
+                                <div>Project Status:</div>
+                                <div>Planning</div>
+                                <div>Project Value:</div>
+                                <div>$95,000,000</div>
+                                <div>Investment Required:</div>
+                                <div>$47,500,000</div>
+                          </div>
+                       </div>
+                    </div> -->
             </section>
         </main>
 
