--- a/nasarawastate.html
+++ b/nasarawastate.html
@@ -87,7 +87,7 @@
             <!-- State Intro -->
             <section class="text-gray-800">
                 <div class="max-w-2xl space-y-4">
-                    <h1 class="text-3xl font-bold">nasarawa State</h1>
+                    <h1 class="text-3xl font-bold">Nasarawa State</h1>
                     <p class="leading-relaxed">
                         Nasarawa State, in north-central Nigeria, is rich in minerals and a key player
                         in mining and agriculture. With growing trade, infrastructure, and industrial
@@ -363,7 +363,7 @@
 
         <footer class="relative p-14 px-0">
             <div class="flex items-center justify-between">
-                <img src="./assets/Logo.png" alt="Logo" class="h-8">
+                <img src="./assets/Logo.png" alt="Logo" class="h-[70px]">
                 <div>
                     <h2 class="text-lg font-semibold">Quick Link</h2>
                     <nav class="space-x-3">
